light box feature working/ fixed photo alignment

--- a/css/style.css
+++ b/css/style.css
@@ -160,10 +160,10 @@ img {
 
 #project-img {
   display: inline-block;
+  padding:10px;
   width:25em;
   height:25em;
   overflow: hidden;
-  
 }
 
 button {
